# DevForge

./: README.md  et --hard ae98941
CLI Agent/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
CLI Agent/.test/: pyvenv.cfg
CLI Agent/.test/Scripts/: activate  activate.bat
CLI Agent/cli_agent/: __init__.py  main.py
CLI Agent/cli_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
CLI Agent/llm_parser/: __init__.py  parser.py  parser_backup.py
CLI Agent/mcp_client/: __init__.py  client.py
CLI Agent/mcp_server/: README.md  __init__.py  mcp_server.py  system_utils.py  test_mcp_request.py
CLI Agent/robot_tests/: TestGitConfiguratorLinux.py  TestGitConfiguratorMac.py  test_integration.py  test_suite.robot
CLI Agent/tests/: test_linux_system_config.py  test_windows_system_config.py
CLI Agent/tools/: __init__.py  code_generator.py  constants.py  install.py  os_utils.py  test_tool_installer.py  test_tool_manager.py  tool_installer.py  tool_manager.py
CLI Agent/tools/git_configurator/: Readme  linux.py  mac.py  readme.md  windows.py
CLI Agent/tools/installers/: linux.py  mac.py  vscode_extension.py  vscode_extension_mac.py  windows.py
CLI Agent/tools/system_config/: __init__.py  linux.py  mac.py  test_system_config_windows.py  windows.py
CLI Agent/tools/uninstallers/: linux.py  mac.py  windows.py
CLI Agent/tools/upgraders/: linux.py  mac.py  windows.py
CLI Agent/tools/utils/: __init__.py  llm_homebrew_resolver.py  mac_tool_manager.py  name_resolver.py  os_utils.py  server_checker.py  server_starter.py
CLI Agent/tools/version_checkers/: linux.py  mac.py  windows.py
Meetings and Resources/: Data_Plan_AI_Agent.docx  Project Objectives.docx  Project Timeline.docx
Meetings and Resources/SystemArchitecture/: SystemArchitecture.docx
