[project]
name = "cli-agent"
version = "1.0.0"
description = "AI-powered development assistant with MCP integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "requests>=2.25.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = []

[project.scripts]
cli-agent = "cli_agent.main:main"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli_agent*", "llm_parser*", "mcp_client*", "mcp_server*", "tools*"]
